# stockapp_notion

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: launch.json
docs/: 2026-07-03.md  2026-07-05-2.md  2026-07-05.md  2026-07-06-2.md  2026-07-06.md  manual.md  plan-2026-07-05-improvements-and-kis.md  plan-2026-07-06-raspberry-pi-deployment.md  plan-2026-07-06-refinements.md  raspberry-pi-setup-guide.md
scripts/: daily_update.bat  run_daily_update.py  setup_notion_databases.py
src/stockapp_notion/: auth.py  cli.py  config.py  dividends.py  kis_api.py  logging_config.py  markets.py  notion_api.py  notion_helpers.py  portfolio.py  prices.py  stocks.py  transactions.py  validation.py  webapp.py
src/stockapp_notion/templates/: index.html  login.html  transactions.html
tests/: test_markets.py  test_portfolio.py  test_reporting.py
